# wasm-rs-blog

./: Cargo.toml  LICENSE_MIT  README.en.md  README.md  index.html
blog-web-root/: README.md  index.html  package-lock.json  package.json
blog-web-root/src/: main.js
blog-web-root/src/components/: HelloWorld.vue
src/: lib.rs  main.rs  router.rs
src/api/: request.rs
src/component/: child_li_a.rs  mod.rs
src/dto/: html_dto.rs  mod.rs
src/util/: js_object.rs  mod.rs
src/view/: index.rs  menu_bar.rs  mod.rs  navigation.rs  navigation_content.rs
static/: index.html
static/css/: global.css  index.css  navigation.css
static/css/view_css/: index.css
web-package/: index.js  package-lock.json  package.json
