[package]
name = "wasm-rs-blog-web"
version = "0.1.0"
authors = ["deishy"]
edition = "2018"

[dependencies]
yew-functional = { git = "https://github.com/yewstack/yew", rev = "f27e268" }
yew = "0.19.3"
yew-router = "0.16.0"
reqwasm = "0.2"
wasm-bindgen-futures = "0.4"

[dependencies.serde]
version = "1.0.133"
features = ["serde_derive"]

[dependencies.serde_json]
version = "1.0.74"

[dependencies.js-sys]
version = "0.3.55"

[dependencies.web-sys]
version = "0.3.55"
features = [
    "CssStyleDeclaration",
    "StyleSheet",
    "StyleSheetList",
    "console",
    "Document",
    "Window",
    "Storage",
]