[package]
name = "wasm-rs-blog-web"
version = "0.1.0"
authors = ["deishy"]
edition = "2018"

[dependencies]
yew = {version = "0.20", features = ["csr"]}
yew-router = "0.17.0"

serde = { version = "1.0.159", features = ["serde_derive"] }
serde_json = "1.0.95"

web-sys = { version = "0.3.55", features = [
    "console",
    "Window",
    "Storage",
] }

wasm-bindgen = "0.2.87"
